cards no longer overflow box

--- a/src/Client/components/Lane/Card.css
+++ b/src/Client/components/Lane/Card.css
@@ -8,4 +8,14 @@
     border: black solid 2px;
     border-radius: 6px;
     text-align: center;
+    max-width: 13.9rem;
+    /* max-width: 10rem; */
+    
+}
+.cardContents {
+    max-width: 100%;
+        word-wrap: break-word;
+}
+.box-contents--card:hover {
+    background-color: yellow;
 }
